communicating with the api

--- a/DRTApp/DRTApp.csproj
+++ b/DRTApp/DRTApp.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="GtfsRealtimeBindings" Version="0.0.4" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="protobuf-net" Version="3.2.19" />
 	</ItemGroup>
 
 </Project>
