--- a/DRTApp/DRTApp.csproj
+++ b/DRTApp/DRTApp.csproj
@@ -69,6 +69,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\routes.txt" />
+	  <None Remove="Resources\Web\index.html" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -78,6 +79,9 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Resources\Raw\trips.txt" />
+	  <Content Include="Resources\Web\index.html">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <EmbeddedResource Include="Resources\Raw\stop_times.txt">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </EmbeddedResource>
